k8s/stress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stress-ingress
  namespace: stress
  labels:
    app: stress-ingress
spec:
  rules:
    - host: fah.stress.karma.run.place
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foldingathome
                port:
                  number: 7396
